# TJ1.6

./: .gitignore.backup  CMakeLists.txt  README.md  ROS2_GIMBAL_COMMAND.md
Camera/Data/: 021072920273.mvdat  022080920368.mvdat
Camera/log/: error_20251126-105514.80897  error_20251126-105515.80897  error_20251126-105516.80897  error_20251126-105517.80897  error_20251126-105518.80897  error_20251126-105519.80897  error_20251126-105520.80897  error_20251126-105521.80897  error_20251126-105522.80897  error_20251126-105523.80897  error_20251126-105524.80897  error_20251126-105525.80897  error_20251126-110845.82336  error_20251126-110846.82336  error_20251126-110847.82336  error_20251126-110848.82336  error_20251126-110849.82336  error_20251126-110850.82336  error_20251126-110851.82336  error_20251126-110852.82336  error_20251126-110853.82336  error_20251126-110854.82336  error_20251126-110855.82336  error_20251126-110856.82336  error_20251126-110857.82336  error_20251126-110858.82336  error_20251126-110859.82336  error_20251126-110900.82336  error_20251126-110901.82336  error_20251126-110902.82336  error_20251126-110903.82336  error_20251126-110904.82336  error_20251126-110905.82336  error_20251126-110906.82336  error_20251126-110907.82336  error_20251126-110908.82336  error_20251126-110909.82336  error_20251126-110910.82336  error_20251126-110911.82336  error_20251126-110912.82336  (+6 more)
assets/img_with_q/: 10  11  4  5  6  8  9
configs/: angle_mode_example.yaml  ascento.yaml  calibration.yaml  camera.yaml  demo.yaml  demo_video.yaml  example.yaml  mvs.yaml  sentry.yaml  standard4.yaml  uav.yaml
docs/: angle_mode_guide.md  simple_serial_guide.md
io/: CMakeLists.txt  camera.cpp
io/gimbal/: simple_gimbal.cpp  simple_gimbal.hpp
io/mindvision/: mindvision.cpp
io/usbcamera/: usbcamera.hpp
src/: auto_aim_test.cpp  auto_buff_test.cpp  camera_test.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  solver.cpp
tasks/auto_buff/: CMakeLists.txt
tests/: auto_aim_test.cpp
